# kaggle_project_czii

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  mypy.ini  pyproject.toml  tox.ini
src/cryoetpicker/: __init__.py  main.py
src/cryoetpicker/config/: config.yaml  copick_fit.json  copick_test.json
src/cryoetpicker/data/: __init__.py  dataset.py  transforms.py
src/cryoetpicker/losses/: __init__.py  deep_supervision.py  dice.py  focal_loss.py  pooling.py  pooling_loss.py
src/cryoetpicker/metrics/: __init__.py  score_metric.py
src/cryoetpicker/models/: __init__.py  augmentation.py  flexible_unet.py  lightning.py  lightning_wrappers.py  unet_supervisor.py
src/cryoetpicker/processings/: __init__.py  post_processings.py
src/cryoetpicker/trainers/: __init__.py  lightning.py
src/cryoetpicker/utils/: __init__.py  utils.py
