[project]
name = "cryoetpicker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Cédrick-Armel YEBOUET", email = "35418979+CedrickArmel@users.noreply.github.com" },
]
requires-python = ">=3.10.16"
dependencies = [
    "hydra-core>=1.3.2",
    "lightning>=2.5.2",
    "monai[all]~=1.4.0",
    "scipy>=1.15.3",
    "torch~=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "isort>=6.0.1",
    "matplotlib>=3.10.3",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
]
xla = ["torch-xla[tpu]~=2.7.0"]

[tool.pylint.messages-control]
disable = []

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
