[project]
name = "cryoetpicker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Cédrick-Armel YEBOUET", email = "35418979+CedrickArmel@users.noreply.github.com" },
]
requires-python = "~=3.10.16"
dependencies = [
    "copick>=1.2.0",
    "hydra-core>=1.3.2",
    "lightning==2.5.1.post0",
    "monai[all]~=1.4.0",
    "scipy>=1.15.3",
    "torch~=2.6.0",
]

[project.scripts]
train = "cryoetpicker.main:train"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "isort>=6.0.1",
    "matplotlib>=3.10.3",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
]
xla = ["libtpu==0.0.7.1", "torch-xla~=2.6.0"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pylint.messages-control]
disable = []

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
name = "libtpu-wheels"
url = "https://storage.googleapis.com/libtpu-wheels/index.html"
explicit = true
format = "flat"

[tool.uv.sources]
libtpu = { index = "libtpu-wheels" }
